--- a/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
@@ -100,40 +100,29 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🚀 手动切换
 
-;地区节点组 - 自动测速+手动选择合并
-custom_proxy_group=🇭🇰 香港节点`select`[]🚁 香港自动`(港|HK|hk|Hong Kong|HongKong|hongkong)
-custom_proxy_group=🚁 香港自动`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
+;地区节点组 - 一体化设计（自动测速+手动选择）
+custom_proxy_group=🇭🇰 香港节点`select`[]♻️ 自动选择`(港|HK|hk|Hong Kong|HongKong|hongkong)
 
-custom_proxy_group=🇯🇵 日本节点`select`[]🚁 日本自动`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
-custom_proxy_group=🚁 日本自动`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`select`[]♻️ 自动选择`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
 
-custom_proxy_group=🇺🇲 美国节点`select`[]🚁 美国自动`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=🚁 美国自动`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇲 美国节点`select`[]♻️ 自动选择`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 
-custom_proxy_group=🇨🇳 台湾节点`select`[]🚁 台湾自动`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=🚁 台湾自动`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾节点`select`[]♻️ 自动选择`(台|新北|彰化|TW|Taiwan)
 
-custom_proxy_group=🇸🇬 狮城节点`select`[]🚁 狮城自动`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=🚁 狮城自动`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`select`[]♻️ 自动选择`(新加坡|坡|狮城|SG|Singapore)
 
-custom_proxy_group=🇰🇷 韩国节点`select`[]🚁 韩国自动`(KR|Korea|KOR|首尔|韩|韓)
-custom_proxy_group=🚁 韩国自动`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`select`[]♻️ 自动选择`(KR|Korea|KOR|首尔|韩|韓)
 
-custom_proxy_group=🇬🇧 英国节点`select`[]🚁 英国自动`(英|伦敦|UK|United Kingdom|GB|Britain)
-custom_proxy_group=🚁 英国自动`url-test`(英|伦敦|UK|United Kingdom|GB|Britain)`http://www.gstatic.com/generate_204`300,,80
+custom_proxy_group=🇬🇧 英国节点`select`[]♻️ 自动选择`(英|伦敦|UK|United Kingdom|GB|Britain)
 
-custom_proxy_group=🇩🇪 德国节点`select`[]🚁 德国自动`(德|柏林|慕尼黑|DE|Germany)
-custom_proxy_group=🚁 德国自动`url-test`(德|柏林|慕尼黑|DE|Germany)`http://www.gstatic.com/generate_204`300,,80
+custom_proxy_group=🇩🇪 德国节点`select`[]♻️ 自动选择`(德|柏林|慕尼黑|DE|Germany)
 
-custom_proxy_group=🇫🇷 法国节点`select`[]🚁 法国自动`(法|巴黎|FR|France)
-custom_proxy_group=🚁 法国自动`url-test`(法|巴黎|FR|France)`http://www.gstatic.com/generate_204`300,,80
+custom_proxy_group=🇫🇷 法国节点`select`[]♻️ 自动选择`(法|巴黎|FR|France)
 
-custom_proxy_group=🇮🇳 印度节点`select`[]🚁 印度自动`(印|孟买|新德里|IN|India)
-custom_proxy_group=🚁 印度自动`url-test`(印|孟买|新德里|IN|India)`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🇮🇳 印度节点`select`[]♻️ 自动选择`(印|孟买|新德里|IN|India)
 
 ;特殊节点组
-custom_proxy_group=🎥 奈飞节点`select`[]🚁 奈飞自动`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
-custom_proxy_group=🚁 奈飞自动`url-test`(NF|奈飞|解锁|Netflix|NETFLIX|Media)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎥 奈飞节点`select`[]♻️ 自动选择`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
 enable_rule_generator=true
