--- a/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
@@ -140,7 +140,7 @@ custom_proxy_group=🚁 法国最优`url-test`(法|巴黎|FR|France)`http://www.
 custom_proxy_group=🇮🇳 印度节点`select`[]🚁 印度最优`(印|孟买|新德里|IN|India)
 custom_proxy_group=🚁 印度最优`url-test`(印|孟买|新德里|IN|India)`http://www.gstatic.com/generate_204`300,,100
 
-;🎭 特殊节点组
+;🎭 奈飞节点组
 custom_proxy_group=🎭 奈飞节点`select`[]🚁 奈飞最优`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🚁 奈飞最优`url-test`(NF|奈飞|解锁|Netflix|NETFLIX|Media)`http://www.gstatic.com/generate_204`300,,50
 
