--- a/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
@@ -43,7 +43,12 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯 全球直连,[]GEOIP,CN
+
+; ✅ 这里是关键修改，替代 GEOIP
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+
+; 保留最终兜底
 ruleset=🐠 漏网之鱼,[]FINAL
 
 ;⚙️ 设置分组标志位 - 按使用频率优化排序
