--- a/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
@@ -1,35 +1,60 @@
-[custom]
-;不要随意改变关键字，否则会导致出错
-;ACL4SSR规则 - 极致优化版 ⚡
-;================================================
-;✨ 功能特性
-;🚫 广告拦截：支持      🤖 AI平台优化：支持
-;⚡ 自动测速：支持      🎬 流媒体增强：支持  
-;Ⓜ️ 微软分流：支持      🍎 苹果分流：支持
-;🛡️ 增强中国IP段：支持  🌍 增强国外GFW：支持
-;================================================
+# Clash & sing-box 通用规则配置模板
+# 支持订阅转换后端自动识别客户端类型并生成对应格式
 
-;🔧 设置规则标志位
+#======================================
+# 🚀 ACL4SSR 极致优化版 - 通用模板 
+# ✨ 同时支持 Clash 和 sing-box 客户端
+# 🔧 订阅转换后端会根据客户端自动选择格式
+#======================================
+
+# 🏷️ 标签和描述
+[custom]
+# 规则配置名称
+clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+
+# sing-box 基础配置模板（可选）
+# singbox_config_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/config/ACL4SSR_Online_Full_AdblockPlus.ini
+
+#======================================
+# 📋 规则集配置 (Ruleset)
+# 按优先级排序，越靠前优先级越高
+#======================================
+
+# 🛡️ 安全和隐私
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🚫 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=✨ 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+
+# 🔔 系统服务
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+
+# 🏢 办公软件
 ruleset=🔍 微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
-ruleset=☁️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=☁️ OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=🖥️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=💬 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+
+# 💬 通讯社交
+ruleset=💬 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+
+# 🤖 AI 平台
 ruleset=🧠 ChatGPT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🤖 AI平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
+
+# 🎵 音乐服务
 ruleset=🎵 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
+
+# 🎮 游戏平台
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
+
+# 📺 流媒体服务
 ruleset=📺 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎬 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🎬 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AmazonIp.list
@@ -37,122 +62,158 @@ ruleset=🏰 Disney+,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🌸 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=📱 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📱 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+
+# 🌏 地区媒体
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+
+# 🚀 代理规则
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+
+# 🎯 直连规则
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 
-; ✅ 这里是关键修改，替代 GEOIP
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+# 📍 IP地理位置规则 (替代GEOIP，更精确)
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 
-; 保留最终兜底
+# 🐠 兜底规则
 ruleset=🐠 漏网之鱼,[]FINAL
 
-;⚙️ 设置分组标志位 - 按使用频率优化排序
-;━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+#======================================
+# 🎛️ 策略组配置 (Custom Proxy Group)
+# 兼容 Clash 和 sing-box 的策略组语法
+#======================================
 
-;🎮 核心选择组
-custom_proxy_group=🚀 节点选择`select`[]⚡ 自动选择`[]🔄 故障转移`[]⚖️ 负载均衡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🎛️ 手动切换`[]DIRECT
+# 🎮 核心选择组
+custom_proxy_group=🚀 节点选择`select`[]⚡ 自动选择`[]🔄 故障转移`[]⚖️ 负载均衡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🎛️ 手动切换`[]DIRECT
 
 custom_proxy_group=🎛️ 手动切换`select`.*
 
+# 🔧 自动化策略组
 custom_proxy_group=⚡ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔄 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=⚖️ 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
-;🔥 高频使用服务（按使用率排序）
-custom_proxy_group=📺 YouTube`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换`[]DIRECT
+# 🔥 高频服务应用
+custom_proxy_group=📺 YouTube`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换`[]DIRECT
 
-custom_proxy_group=🎬 Netflix`select`[]🎭 奈飞节点`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇸🇬 新加坡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇬🇧 英国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换`[]DIRECT
+custom_proxy_group=🎬 Netflix`select`[]🎭 奈飞节点`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇬🇧 英国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换`[]DIRECT
 
-custom_proxy_group=🧠 ChatGPT`select`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🚀 节点选择`[]⚡ 自动选择`[]🎛️ 手动切换`[]DIRECT
+custom_proxy_group=🧠 ChatGPT`select`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🚀 节点选择`[]⚡ 自动选择`[]🎛️ 手动切换`[]DIRECT
 
-custom_proxy_group=🤖 AI平台`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🎛️ 手动切换`[]DIRECT
+custom_proxy_group=🤖 AI平台`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🎛️ 手动切换`[]DIRECT
 
-;🎭 流媒体娱乐
-custom_proxy_group=🏰 Disney+`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇸🇬 新加坡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇬🇧 英国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🎛️ 手动切换`[]DIRECT
+# 🎭 流媒体娱乐
+custom_proxy_group=🏰 Disney+`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇬🇧 英国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🎛️ 手动切换`[]DIRECT
 
 custom_proxy_group=🌸 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🎛️ 手动切换`[]DIRECT
 
 custom_proxy_group=📱 哔哩哔哩`select`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
 
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换`[]DIRECT
 
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🎛️ 手动切换
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🎛️ 手动切换
 
-;💬 通讯社交
-custom_proxy_group=💬 电报消息`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇸🇬 新加坡`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换`[]DIRECT
+# 💬 通讯社交
+custom_proxy_group=💬 Telegram`select`[]🚀 节点选择`[]⚡ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换`[]DIRECT
 
-;🏢 办公服务
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
+# 🏢 办公服务
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
 
-custom_proxy_group=🔍 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
+custom_proxy_group=🔍 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
 
-custom_proxy_group=☁️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
+custom_proxy_group=☁️ OneDrive`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
 
-custom_proxy_group=🖥️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
+custom_proxy_group=🖥️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
 
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
 
-;🎮 游戏娱乐
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
+# 🎮 游戏娱乐
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🎛️ 手动切换
 
 custom_proxy_group=🎵 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]⚡ 自动选择`(网易|音乐|解锁|Music|NetEase)
 
-;🛠️ 系统功能
+# 🛠️ 系统功能
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]⚡ 自动选择
 
 custom_proxy_group=🚫 广告拦截`select`[]REJECT`[]DIRECT
 
 custom_proxy_group=✨ 应用净化`select`[]REJECT`[]DIRECT
 
-custom_proxy_group=🐠 漏网之鱼`select`[]🚀 节点选择`[]⚡ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换
+custom_proxy_group=🐠 漏网之鱼`select`[]🚀 节点选择`[]⚡ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🎛️ 手动切换
 
-;━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-;🌐 地区节点组 - 智能自动选择 + 手动精选
-;━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+#======================================
+# 🌐 地区节点组 - 智能筛选
+# 支持自动选择最优节点和手动精选
+#======================================
 
+# 🇭🇰 香港节点
 custom_proxy_group=🇭🇰 香港节点`select`[]🚁 香港最优`(港|HK|hk|Hong Kong|HongKong|hongkong)
 custom_proxy_group=🚁 香港最优`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
 
+# 🇺🇸 美国节点  
 custom_proxy_group=🇺🇸 美国节点`select`[]🚁 美国最优`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 custom_proxy_group=🚁 美国最优`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
 
-custom_proxy_group=🇸🇬 新加坡`select`[]🚁 新加坡最优`(新加坡|坡|狮城|SG|Singapore)
+# 🇸🇬 新加坡节点
+custom_proxy_group=🇸🇬 新加坡节点`select`[]🚁 新加坡最优`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=🚁 新加坡最优`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 
+# 🇯🇵 日本节点
 custom_proxy_group=🇯🇵 日本节点`select`[]🚁 日本最优`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
 custom_proxy_group=🚁 日本最优`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 
+# 🇨🇳 台湾节点
 custom_proxy_group=🇨🇳 台湾节点`select`[]🚁 台湾最优`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🚁 台湾最优`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 
+# 🇰🇷 韩国节点
 custom_proxy_group=🇰🇷 韩国节点`select`[]🚁 韩国最优`(KR|Korea|KOR|首尔|韩|韓)
 custom_proxy_group=🚁 韩国最优`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 
+# 🇬🇧 英国节点
 custom_proxy_group=🇬🇧 英国节点`select`[]🚁 英国最优`(英|伦敦|UK|United Kingdom|GB|Britain)
 custom_proxy_group=🚁 英国最优`url-test`(英|伦敦|UK|United Kingdom|GB|Britain)`http://www.gstatic.com/generate_204`300,,80
 
+# 🇩🇪 德国节点
 custom_proxy_group=🇩🇪 德国节点`select`[]🚁 德国最优`(德|柏林|慕尼黑|DE|Germany)
 custom_proxy_group=🚁 德国最优`url-test`(德|柏林|慕尼黑|DE|Germany)`http://www.gstatic.com/generate_204`300,,80
 
+# 🇫🇷 法国节点
 custom_proxy_group=🇫🇷 法国节点`select`[]🚁 法国最优`(法|巴黎|FR|France)
 custom_proxy_group=🚁 法国最优`url-test`(法|巴黎|FR|France)`http://www.gstatic.com/generate_204`300,,80
 
+# 🇮🇳 印度节点
 custom_proxy_group=🇮🇳 印度节点`select`[]🚁 印度最优`(印|孟买|新德里|IN|India)
 custom_proxy_group=🚁 印度最优`url-test`(印|孟买|新德里|IN|India)`http://www.gstatic.com/generate_204`300,,100
 
-;🎭 奈飞节点组
+# 🎭 奈飞节点 (专用流媒体节点)
 custom_proxy_group=🎭 奈飞节点`select`[]🚁 奈飞最优`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🚁 奈飞最优`url-test`(NF|奈飞|解锁|Netflix|NETFLIX|Media)`http://www.gstatic.com/generate_204`300,,50
 
+#======================================
+# ⚙️ 转换设置
+#======================================
+
+# 启用规则生成器
 enable_rule_generator=true
+# 覆盖原始规则
 overwrite_original_rules=true
 
-;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+#======================================
+# 📝 使用说明
+#======================================
+# 1. 本模板采用通用格式，支持主流订阅转换后端
+# 2. 后端会根据客户端类型自动转换为对应格式：
+#    - Clash 系列：生成 YAML 格式
+#    - sing-box：生成 JSON 格式  
+#    - Quantumult X：生成对应格式
+# 3. 无需手动修改，直接使用即可
+# 4. 如需自定义，建议基于此模板进行修改
 
-;🎨 Enhanced by Claude - 极致优化版 v2.1 ⚡
-;━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+#======================================
+# 🎨 Enhanced by Claude v3.0 ⚡
+# 📅 更新时间：2025-08-30
+#======================================
