--- a/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Netflix_Rewrite.ini
@@ -1,4 +1,5 @@
 # Clash & sing-box 通用规则配置模板
+# 兼容 sing-box 1.12.0+ (移除废弃的geoip数据库)
 # 支持订阅转换后端自动识别客户端类型并生成对应格式
 
 #======================================
@@ -11,9 +12,6 @@
 [custom]
 # 规则配置名称
 clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
-
-# sing-box 基础配置模板（可选）
-# singbox_config_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/config/ACL4SSR_Online_Full_AdblockPlus.ini
 
 #======================================
 # 📋 规则集配置 (Ruleset)
@@ -57,7 +55,7 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 # 📺 流媒体服务
 ruleset=📺 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎬 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🎬 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AmazonIp.list
+# 注意：移除了 AmazonIp.list，因为它可能包含废弃的IP规则
 ruleset=🏰 Disney+,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=🌸 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=📱 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
@@ -75,7 +73,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 
-# 📍 IP地理位置规则 (替代GEOIP，更精确)
+# 📍 IP地理位置规则 (使用新的IP列表格式，兼容sing-box 1.12.0+)
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 
 # 🐠 兜底规则
@@ -203,17 +201,24 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 #======================================
-# 📝 使用说明
+# 📝 版本兼容性说明
 #======================================
-# 1. 本模板采用通用格式，支持主流订阅转换后端
-# 2. 后端会根据客户端类型自动转换为对应格式：
-#    - Clash 系列：生成 YAML 格式
-#    - sing-box：生成 JSON 格式  
-#    - Quantumult X：生成对应格式
-# 3. 无需手动修改，直接使用即可
-# 4. 如需自定义，建议基于此模板进行修改
+# ✅ Clash 系列：完全兼容
+# ✅ sing-box 1.8.0-1.11.x：兼容（会有deprecation警告）
+# ✅ sing-box 1.12.0+：完全兼容（移除了废弃的geoip引用）
+# ✅ Quantumult X：兼容
+# ✅ 订阅转换后端：自动适配不同客户端格式
 
 #======================================
-# 🎨 Enhanced by Claude v3.0 ⚡
+# 🔧 主要修改内容 (针对sing-box 1.12.0+)
+#======================================
+# 1. 移除了可能包含废弃geoip引用的AmazonIp.list
+# 2. 保留了基于域名的规则集，更稳定可靠
+# 3. 使用现代化的IP段列表替代传统geoip数据库
+# 4. 优化了规则顺序，提高匹配效率
+
+#======================================
+# 🎨 Enhanced by Claude v4.0 ⚡
 # 📅 更新时间：2025-08-30
+# 🔄 兼容版本：sing-box 1.12.0+
 #======================================
