--- a/Clash/config/ACL4SSR_Online_MultiCountry.ini
+++ b/Clash/config/ACL4SSR_Online_MultiCountry.ini
@@ -8,7 +8,7 @@
 ;苹果分流：支持
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
-;多国家分组：支持港/日/美/新/其他
+;多国家分组：支持港/日/美/新/台/其他
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/cmliu/ACL4SSR/refs/heads/main/Clash/CFnat.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -43,14 +43,14 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]☑️ 手动切换`[]DIRECT`(NF|奈飞|解锁|Netflix|NETFLIX|Media|MITM)
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🎯 全球直连`.*
-custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🎯 全球直连`.*
-custom_proxy_group=🤖 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`.*
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`[]🇺🇲 美国节点`[]🇭🇰 香港节点`.*
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`.*
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`[]☑️ 手动切换`[]DIRECT`(NF|奈飞|解锁|Netflix|NETFLIX|Media|MITM)
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`[]🎯 全球直连`.*
+custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`[]🎯 全球直连`.*
+custom_proxy_group=🤖 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`.*
+custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`.*
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🌏 其他节点`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
